--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Hrithin</title>
 </head>
 <body>
-<h1>Hi! I am Hrithin</h1>
+<h1>Hi! I am Hrithin I am learning web development</h1>
 </body>
 </html>
